--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@discordjs/builders": "^1.11.3",
     "axios": "^1.11.0",
+    "better-sqlite3": "^12.2.0",
     "colors": "^1.4.0",
     "discord-hybrid-sharding": "^2.2.6",
     "discord.js": "^14.22.0",
