--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "author": "ZarCodeX",
   "dependencies": {
     "@discordjs/builders": "^1.11.3",
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.18.0",
+    "@distube/youtube": "^1.0.4",
     "axios": "^1.11.0",
     "better-sqlite3": "^12.2.0",
     "colors": "^1.4.0",
     "discord-hybrid-sharding": "^2.2.6",
-    "discord.js": "^14.22.0",
+    "discord.js": "^14.22.1",
+    "distube": "^5.0.7",
     "dotenv": "^17.2.1"
   }
 }
