--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@discordjs/voice": "^0.18.0",
     "axios": "^1.11.0",
     "better-sqlite3": "^12.2.0",
+    "chance": "^1.1.13",
     "colors": "^1.4.0",
     "discord-hybrid-sharding": "^2.2.6",
     "discord.js": "^14.22.1",
