--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord-hybrid-sharding": "^2.2.6",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "ms": "^2.1.3",
     "musicard": "^2.0.5",
     "riffy": "^1.0.7"
