--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "ms": "^2.1.3",
     "musicard": "^2.0.5",
+    "node-cron": "^4.2.1",
     "riffy": "^1.0.7"
   }
 }
