--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ms": "^2.1.3",
-    "musicard": "^2.0.5",
-    "node-cron": "^4.2.1",
-    "riffy": "^1.0.7"
+    "node-cron": "^4.2.1"
   }
 }
